tests/NormalTests/paczka1/small_fuzzy/79594962.err
Error in line 8: 4INk A58 84,5
Error in line 14: mtU A58 71,9
